[package]
name = 'trace'
version = '0.0.0'
authors = ['Matthias Fauconneau <matthias.fauconneau@gmail.com>']
edition = '2018'

[lib]
path = 'lib.rs'

[dependencies]
#array ={path='../array'}
cfg-if =''
fehler =''
anyhow =''
rstack-self ={version='', features=["dw"], default-features=false}
signal-hook = ''
